--- a/README
+++ b/README
@@ -23,10 +23,10 @@ Code 1
 
 Code branch 3
 
-
 Code 4
 
 toan test git
+
 
 Code 4
 
@@ -36,3 +36,9 @@ code_1
 toan commmit 1
 
 toan commit 2
+
+
+
+thu_test_2
+
+thu_test_3
