--- a/README
+++ b/README
@@ -1,44 +1,3 @@
 
- commit
-commit 2
-
-phong commit
-
-hoang commit
-
-hoang cmmit 2
-
-
-hoang commit 2 lan nua =))
-
-hoang commit 2 them lan nua =))
-
-Test
-
-Test test
-
-Code code
-
-Code 1
-
-Code branch 3
-
-Code 4
-
-toan test git
-
-
-Code 4
-
-
-
-code_1
-toan commmit 1
-
-toan commit 2
-
-
-
-thu_test_2
-
-thu_test_3
+manhbnt
+manhbnt2
